# TKGE-icu-readmission

./: README.md
Embeddings/: README.md  pyproject.toml
Embeddings/deploy/sbatch/: ComplEx.sh  Distmult.sh  TAdistMult.sh  TAtransE.sh  TNTcomplEx.sh  TcomplEx.sh  TransE.sh  TtransE.sh
Embeddings/embeddings/emb-TAdistMult/: data_conversion.py  runTAdistMult.py
Embeddings/embeddings/emb-TAtransE/: preprocess_TA.py  runTAtransE.py
Embeddings/embeddings/emb-TNTcomplEx/: runTNTcomplEx.py  tkbc_data_conversion.py
Embeddings/embeddings/emb-TtransE/: data_conversion.py  preprocess_TTransE.py  runTTransE.py
Embeddings/embeddings/emb-complEx/: runComplEx-OpenKE.py
Embeddings/embeddings/emb-distMult/: runDistmult-OpenKE.py
Embeddings/embeddings/emb-transE/: runTransE-OpenKE.py
Embeddings/resources/: helperTime.py
ReadmissionPrediction/: README.md  avg_metrics.py  baseline_feature_engineering.py  dataSet_construction.py  data_preparation.py  feature_engineering.py  ml_prediction.py  pyproject.toml
TKGConstructions/: README.md  timeHandlingModule.py
TKGConstructions/ICU-NCIT/: makeOntologyFiles.py  makePatientsFiles.py  mergeFiles.py  mergeSummary.py
