[project]
name = "Embeddings"
version = "0.1.0"
description = ""
authors = [{ name = "RmsCarvalho", email = "rmscarvalho@fc.ul.pt" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "rdflib>=7.1.1,<8",
    "networkx>=3.4.2,<4",
    "matplotlib>=3.9.2,<4",
    "scikit-learn>=1.5.2,<2",
    "tensorflow-io-gcs-filesystem==0.34.0",
    "tensorflow>=2.18.0,<3",
    "pandas>=2.2.3,<3",
    "tqdm>=4.67.0,<5",
    "torch>=2.5.1,<3",
    "numpy>=2.0.2",
    "scipy>=1.15.2",
    "umap>=0.1.1",
    "umap-learn>=0.5.7",
]

[dependency-groups]
prebuild = [
    "flake8>=7.1.1,<8",
    "isort>=5.13.2,<6",
    "mypy>=1.13.0,<2",
    "pytest>=8.3.3,<9",
]

[tool.uv]
default-groups = ["prebuild"]

[tool.hatch.build.targets.sdist]
include = ["embeddings"]

[tool.hatch.build.targets.wheel]
include = ["embeddings"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
