[project]
name = "readmissionprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.0.2",
    "jinja2>=3.1.6",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scikit-posthocs>=0.11.4",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=2.1.4",
]
